--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -89,11 +89,7 @@ smart_menu:
   aboutme: '签名'
 
 friends:
-  友情链接1: http://localhost:4000/
-  友情链接2: http://localhost:4000/
-  友情链接3: http://localhost:4000/
-  友情链接4: http://localhost:4000/
-  友情链接5: http://localhost:4000/
-  友情链接6: http://localhost:4000/
-
+  案例作品: https://echoflash.github.io/
+  引导页: /guide/
+  
 aboutme: 很惭愧<br><br>只做了一点微小的工作<br>谢谢大家
