把生成的静态网站，同时部署到 github，coding两个 pages 服务上

--- a/_config.yml
+++ b/_config.yml
@@ -70,9 +70,10 @@ theme: yilia
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/flashblogs/flashblogs.github.io.git
-  branch: master
-
+  repo:
+    github: https://github.com/flashblogs/flashblogs.github.io.git,master
+    coding: https://git.coding.net/ishow/ishow.coding.me.git,master
+  
 
 sitemap:
     path: sitemap.xml
