--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://flashBlogs.github.com
+url: https://ishow.coding.me/
 root: /
 permalink: :year/:month/:day/:title.html
 permalink_defaults:
