--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -89,7 +89,7 @@ smart_menu:
   aboutme: '签名'
 
 friends:
-  案例作品: https://echoflash.github.io/
-  引导页: /guide/
+  案例作品: https://echobean.coding.me/
+  引导页: /#guide/
   
 aboutme: 很惭愧<br><br>只做了一点微小的工作<br>谢谢大家
