--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -92,4 +92,4 @@ friends:
   案例作品: https://echobean.coding.me/
   引导页: /#guide/
   
-aboutme: 很惭愧<br><br>只做了一点微小的工作<br>谢谢大家
+aboutme: 生活点滴<br><br>只做了一点微小的工作<br>谢谢大家
